crates/ruff_python_parser/tests/snapshots/valid_syntax@star_index_py311.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/star_index_py311.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..293,
        body: [
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 44..55,
                    value: Subscript(
                        ExprSubscript {
                            node_index: 0,
                            range: 44..55,
                            value: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 44..47,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Tuple(
                                ExprTuple {
                                    node_index: 0,
                                    range: 48..54,
                                    elts: [
                                        Starred(
                                            ExprStarred {
                                                node_index: 0,
                                                range: 48..54,
                                                value: Name(
                                                    ExprName {
                                                        node_index: 0,
                                                        range: 49..54,
                                                        id: Name("index"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: 0,
                    range: 72..112,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Array"),
                        range: 78..83,
                        node_index: 0,
                    },
                    type_params: None,
                    arguments: Some(
                        Arguments {
                            range: 83..107,
                            node_index: 0,
                            args: [
                                Subscript(
                                    ExprSubscript {
                                        node_index: 0,
                                        range: 84..106,
                                        value: Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 84..91,
                                                id: Name("Generic"),
                                                ctx: Load,
                                            },
                                        ),
                                        slice: Tuple(
                                            ExprTuple {
                                                node_index: 0,
                                                range: 92..105,
                                                elts: [
                                                    Name(
                                                        ExprName {
                                                            node_index: 0,
                                                            range: 92..97,
                                                            id: Name("DType"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Starred(
                                                        ExprStarred {
                                                            node_index: 0,
                                                            range: 99..105,
                                                            value: Name(
                                                                ExprName {
                                                                    node_index: 0,
                                                                    range: 100..105,
                                                                    id: Name("Shape"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                                ctx: Load,
                                                parenthesized: false,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: 0,
                                range: 109..112,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: 0,
                                        range: 109..112,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 148..161,
                    value: Subscript(
                        ExprSubscript {
                            node_index: 0,
                            range: 148..161,
                            value: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 148..151,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Tuple(
                                ExprTuple {
                                    node_index: 0,
                                    range: 152..160,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 152..153,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        Starred(
                                            ExprStarred {
                                                node_index: 0,
                                                range: 155..157,
                                                value: Name(
                                                    ExprName {
                                                        node_index: 0,
                                                        range: 156..157,
                                                        id: Name("b"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 159..160,
                                                id: Name("c"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 185..198,
                    value: Subscript(
                        ExprSubscript {
                            node_index: 0,
                            range: 185..198,
                            value: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 185..188,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Tuple(
                                ExprTuple {
                                    node_index: 0,
                                    range: 189..197,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 189..190,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 192..193,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                        Starred(
                                            ExprStarred {
                                                node_index: 0,
                                                range: 195..197,
                                                value: Name(
                                                    ExprName {
                                                        node_index: 0,
                                                        range: 196..197,
                                                        id: Name("c"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 222..233,
                    value: Subscript(
                        ExprSubscript {
                            node_index: 0,
                            range: 222..233,
                            value: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 222..225,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Tuple(
                                ExprTuple {
                                    node_index: 0,
                                    range: 226..232,
                                    elts: [
                                        Starred(
                                            ExprStarred {
                                                node_index: 0,
                                                range: 226..228,
                                                value: Name(
                                                    ExprName {
                                                        node_index: 0,
                                                        range: 227..228,
                                                        id: Name("a"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                        Starred(
                                            ExprStarred {
                                                node_index: 0,
                                                range: 230..232,
                                                value: Name(
                                                    ExprName {
                                                        node_index: 0,
                                                        range: 231..232,
                                                        id: Name("b"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 254..271,
                    value: Subscript(
                        ExprSubscript {
                            node_index: 0,
                            range: 254..271,
                            value: Name(
                                ExprName {
                                    node_index: 0,
                                    range: 254..259,
                                    id: Name("array"),
                                    ctx: Load,
                                },
                            ),
                            slice: Tuple(
                                ExprTuple {
                                    node_index: 0,
                                    range: 260..270,
                                    elts: [
                                        Slice(
                                            ExprSlice {
                                                node_index: 0,
                                                range: 260..263,
                                                lower: Some(
                                                    NumberLiteral(
                                                        ExprNumberLiteral {
                                                            node_index: 0,
                                                            range: 260..261,
                                                            value: Int(
                                                                3,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                upper: Some(
                                                    NumberLiteral(
                                                        ExprNumberLiteral {
                                                            node_index: 0,
                                                            range: 262..263,
                                                            value: Int(
                                                                5,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                step: None,
                                            },
                                        ),
                                        Starred(
                                            ExprStarred {
                                                node_index: 0,
                                                range: 265..270,
                                                value: Name(
                                                    ExprName {
                                                        node_index: 0,
                                                        range: 266..270,
                                                        id: Name("idxs"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
